--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawableEnd="@android:drawable/ic_menu_search"
+        android:drawableRight="@android:drawable/ic_menu_search"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:linksClickable="false"
-        android:longClickable="false"
-        android:focusable="false"
-        android:drawableRight="@android:drawable/ic_menu_search" />
+        android:inputType="textAutoCorrect" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -46,7 +43,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:onClick="test"
             android:text="test" />
 
         <Button
