--- a/app/src/main/res/layout/itemhistry.xml
+++ b/app/src/main/res/layout/itemhistry.xml
@@ -60,7 +60,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:src="@android:drawable/star_big_off" />
+            android:src="@android:drawable/ic_delete" />
 
         <ImageButton
             android:id="@+id/btn_view"
